2015-04-18  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	Fix bug #23471 : Problems when saving into ASS - rename Actor with Name

2015-04-18  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Fix bug #23317 : Character & messes up subtitle preview

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	Fix bug #20170 : "Video"/"Timing from player" with an offset - only if playing

2015-04-17  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Fix bug #23486 : Remember window size, work with gtkmm 3.10 and 3.12

2015-04-17  kitone  <kitone@gna.org>

	* src/gui/application.cc:
	Fix bug #23486 : Remember window size.

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/timingfromplayer/Makefile.am:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	Fix bug #20170 : "Video"/"Timing from player" with an offset

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Add the ability to use option #mseconds.

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Add the ability to use option #time.

2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Fix bug #23476 : Add preference close button

2015-04-14  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Fix bug #23476 : Allow configuring the delay for external player.

2015-04-12  kitone  <kitone@gna.org>

	* share/ui/subtitleeditor.ui:
	* src/gui/application.cc:
	* src/gui/application.h: